# SteelEngine

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  Setup.py  SteelEngine.sln.DotSettings  VulkanRayTracing.sln.DotSettings
Assets/Environments/: DuskHills.hdr  SunnyHills.hdr
Assets/Scenes/CornellBox/: CornellBox.gltf
Assets/Scenes/Cube/: AnimatedCube.gltf  AnimatedCubes.gltf
Assets/Scenes/DamagedHelmet/: DamagedHelmet.gltf
Assets/Scenes/Sponza/: Sponza.gltf
Config/: AppConfig.ini  EngineConfig.ini  SteelEngine.DotSettings  SteelEngine.sln.DotSettings  imgui.ini
Shaders/: Rasterize.frag  Rasterize.vert  RayTrace.rchit  RayTrace.rgen  RayTrace.rmiss  Test.frag  Test.vert
Source/: main.cpp  pch.hpp
Source/Engine/: AnimationConfig.hpp  Camera.hpp  CameraSystem.hpp  Config.hpp  ConfigParser.hpp  ConsoleVariable.hpp  Engine.hpp  EngineHelpers.hpp  Filesystem.hpp  InputHelpers.hpp  System.hpp  Window.hpp
Source/Engine/Components/: Components.hpp  TransformComponent.hpp
Source/Engine/Components/Private/: Components.cpp  StorageComponents.cpp  TransformComponent.cpp
Source/Engine/Filesystem/: Filepath.hpp  Filesystem.hpp  ImageLoader.hpp
Source/Engine/Filesystem/Private/: Filepath.cpp  Filesystem.cpp  ImageLoader.cpp
Source/Engine/Private/: Camera.cpp  CameraSystem.cpp  Config.cpp  ConfigParser.cpp  ConsoleVariable.cpp  Engine.cpp  Filesystem.cpp  Window.cpp
Source/Engine/Render/: ForwardRenderPass.hpp  FrameLoop.hpp  HybridRenderer.hpp  ImGuiRenderer.hpp  OcclusionRenderer.hpp  PathTracer.hpp  PathTracingRenderer.hpp  PathTracingStage.hpp  ProbeRenderer.hpp  Rasterizer.hpp  RayTracer.hpp  RenderContext.hpp  RenderHelpers.hpp  RenderLoop.hpp  RenderObject.hpp  RenderOptions.hpp  RenderSystem.hpp  Renderer.hpp  SceneRenderer.hpp  UIRenderSystem.hpp  UIRenderer.hpp
Source/Engine/Render/Private/: ForwardRenderPass.cpp  FrameLoop.cpp  HybridRenderer.cpp  ImGuiRenderer.cpp  OcclusionRenderer.cpp  PathTracer.cpp  PathTracingRenderer.cpp  PathTracingStage.cpp  ProbeRenderer.cpp  Rasterizer.cpp  RayTracer.cpp  RenderContext.cpp  RenderHelpers.cpp  RenderLoop.cpp  RenderObject.cpp  RenderOptions.cpp  RenderSystem.cpp  Renderer.cpp  SceneRenderer.cpp  UIRenderSystem.cpp  UIRenderer.cpp
Source/Engine/Render/Stages/: AtmosphereStage.hpp  DebugDrawStage.hpp  DeferredStage.hpp  ForwardStage.hpp  GBufferStage.hpp  LightingStage.hpp  PathTracingStage.hpp  PostProcessStage.hpp  RenderStage.hpp  StageHelpers.hpp  TranslucentStage.hpp
Source/Engine/Render/Vulkan/: Device.hpp  (+22 more)
Source/Engine/Scene/: AnimationHelpers.hpp  Components.hpp  DirectLighting.hpp  Environment.hpp  GlobalIllumination.hpp  ImageBasedLighting.hpp  Material.hpp  MeshHelpers.hpp  Node.hpp  Primitive.hpp  Scene.hpp  SceneComponents.hpp  SceneHelpers.hpp  SceneLoader.hpp  SceneMerger.hpp  SceneModel.hpp  ScenePT.hpp  SceneRT.hpp  StorageComponents.hpp  Transform.hpp
Source/Engine/System/: CameraSystem.hpp  PathTracingSystem.hpp  RenderSystem.hpp  RenderSystemPT.hpp  RenderSystemRT.hpp  System.hpp  UIRenderSystem.hpp
Source/Engine/Systems/: CameraSystem.hpp  RenderSystem.hpp  RenderSystemPT.hpp  TestMovementSystem.hpp  TransformSystem.hpp  UIRenderSystem.hpp  UIRenderer.hpp
Source/Engine/UI/: AnimationPlayer.hpp  AnimationWidget.hpp  CVarsWidget.hpp  EntityWidget.hpp  HierarchyViewer.hpp  HierarchyWidget.hpp  ImGuiRenderer.hpp  ImGuiWidget.hpp  StatViewer.hpp  StatWidget.hpp  TransformViewer.hpp
Source/Engine2/: Components2.hpp  Engine2.hpp  Material.hpp  Primitive.hpp  RenderComponent.hpp  Renderer.hpp  Scene2.hpp
Source/Engine2/Private/: Components2.cpp  Engine2.cpp  Material.cpp  Primitive.cpp  RenderComponent.cpp  Renderer.cpp  Scene2.cpp
Source/Shaders/Common/: BSDF.glsl  Common.glsl  Common.h  Constants.glsl  Debug.glsl  MonteCarlo.glsl  PBR.glsl  Random.glsl  RayTracing.glsl  RayTracing.h  Stages.h
Source/Shaders/Compute/: Compute.glsl  Compute.h  Copying.comp  DirectLight.comp  DirectLightMax.comp  DirectLightSum.comp  EquirectangularToCube.comp  PanoramaToCube.comp  PostProcess.comp  ThreadGroupTiling.glsl
Source/Shaders/Forward/: Default.frag  Default.vert  Environment.frag  Environment.vert  Forward.frag  Forward.h  Forward.vert  Standard.frag  Standard.vert
Source/Shaders/Hybrid/: Environment.frag  Environment.layout  Environment.vert  Forward.frag  Forward.layout  Forward.vert  GBuffer.frag  GBuffer.layout  GBuffer.vert  Hybrid.frag  Hybrid.glsl  Hybrid.h  IrradianceVolume.frag  IrradianceVolume.vert  LightVolume.frag  LightVolume.glsl  LightVolume.vert  LightVolumeEdges.frag  LightVolumeEdges.layout  LightVolumeEdges.vert  LightVolumePositions.frag  LightVolumePositions.layout  LightVolumePositions.vert  Lighting.comp  Lighting.glsl  Lighting.layout  Material.glsl  PointLights.frag  PointLights.vert  RayQuery.glsl  RayTracing.glsl  Standard.frag
Source/Shaders/PathTracing/: AnyHit.rahit  ClosestHit.rchit  Default.rchit  Default.rmiss  Environment.rmiss  Lighting.glsl  Material.rchit  Material.rmiss  Miss.rmiss  PathTracing.comp  PathTracing.glsl  PathTracing.h  PathTracing.layout  PathTracing.rchit  PathTracing.rgen  PathTracing.rmiss  PointLights.rchit  Primary.rgen  RayGen.rgen  Shadow.rmiss  Sphere.rint
Source/Shaders/RayTracing/: AnyHit.rahit  ClosestHit.rchit  Miss.rmiss  Occlusion.rchit  Occlusion.rmiss  RayGen.rgen  RayTracing.glsl  RayTracing.h
Source/Shaders/Template/: Template.comp  Template.glsl  Template.layout
Source/Shaders/Utils/: Constants.glsl  Random.glsl
Source/Shaders2/: GBuffer.frag  GBuffer.vert
Source/Shaders2/Common/: Common.glsl  Common.h  Constants.glsl  PBR.glsl
Source/Utils/: AABBox.hpp  Assert.hpp  Color.hpp  DataHelpers.hpp  Defines.hpp  Filesystem.hpp  Flags.hpp  Helpers.hpp  Logger.hpp  TimeHelpers.hpp  Transform.hpp
Source/Utils/Private/: AABBox.cpp  Color.cpp  Filesystem.cpp  Helpers.cpp  Logger.cpp  TimeHelpers.cpp  Timer.cpp  Transform.cpp
source/: main.cpp
source/Engine/: Engine.hpp
source/Engine/Private/: Engine.cpp
source/Engine/Window/: Window.hpp
sourceTmp/: main.cpp
(+222 files in other folders)
